syntax = "proto3";
package DomainServices.CaseService;
option csharp_namespace = "DomainServices.CaseService.Contracts";

import "google/protobuf/wrappers.proto";
import "GrpcDecimal.proto";

message CaseData {
	// Produkt
	int32 ProductTypeId = 1;
	
	// Cilova castka / vyse hypoteky
	cis.types.GrpcDecimal TargetAmount = 2;
	
	// Cislo smlouvy hypo nebo SS
	string ContractNumber = 3;
}
